--- a/template/views/pf.hbs
+++ b/template/views/pf.hbs
@@ -183,6 +183,24 @@
                         </div>
                       </div>
                     </div>
+                    <div class="rlr-fieldrow__item js-fieldrow__item rlr-fieldrow__item--multiple">
+                      <div class="row">
+                        <div class="col-xl-10">
+                          <label class="rlr-form-label rlr-form-label--dark" for="rlr-product-form-product-keyword">
+                            Meta Keyword </label>
+                          <textarea required id="rlr-product-form-product-keyword"
+                            class="form-control form-control--text-area" placeholder="Provide meta keyword."
+                            rows="12"></textarea>
+                        </div>
+                        <div class="col-xl-2">
+                          <button type="button"
+                            class="btn rlr-button btn rlr-button rlr-button--form-tooltip rlr-button--transparent rlr-js-tool-tip"
+                            data-tippy-content='&lt;span class&#x3D;"type-lead-semibold"&gt;Meta Description&lt;/span&gt; &lt;p&gt;are used by google in listing&lt;/p&gt;'>
+                            <i class="rlr-icon-font flaticon-information-button"> </i>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </fieldset>
