--- a/template/views/pf.hbs
+++ b/template/views/pf.hbs
@@ -320,6 +320,13 @@
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
                       </select>
                     </div>
                   </div>
@@ -368,10 +375,12 @@
                         <div class="rlr-input-groups rlr-custom-inputs">
                           <div class="rlr-custom-input rlr-custom-input--option">
                             <select class="form-select rlr-form-select">
-                              <option value="" disabled="disabled" selected="selected">Single Room</option>
-                              <option value="Health and Fitness">Health and Fitness</option>
-                              <option value="Outdoor and Adventure">Outdoor and Adventure</option>
-                              <option value="Religion">Religion</option>
+                              <option value="Normal Room" selected="selected">Guest house</option>
+                              <option value="3 Star room">2 start room</option>
+                              <option value="3 Star room">3 Star room</option>
+                              <option value="Breakfast">Breakfast</option>
+                              <option value="Lunch">Lunch</option>
+                              <option value="Dinner">Dinner</option>
                             </select>
                           </div>
                         </div>
