--- a/template/views/privacy.hbs
+++ b/template/views/privacy.hbs
@@ -20,9 +20,8 @@
             <div class="container">
                 <div class="rlr-section__title">
                     <h2 class="rlr-section__title--main">Privacy-Policy</h2>
-                    <span class="rlr-section__title--sub">Effective Date: [Insert Date]</span>
                     <p class="">
-                        This Privacy Policy outlines how [Your Web App Name] ("we," "us," or "our") collects, uses, and
+                        This Privacy Policy outlines how Vrindavan Mathura Tour Package ("we," "us," or "our") collects, uses, and
                         protects the personal information of individuals ("users" or "you") who use our tour and travel
                         services. We are committed to maintaining the privacy and confidentiality of your personal
                         information and comply with applicable data protection laws and regulations. By using our web
