--- a/template/views/login.hbs
+++ b/template/views/login.hbs
@@ -22,7 +22,7 @@
                 <form class="rlr-authforms">
                   <div class="rlr-authforms__header">
                     <img src="/assets/favicon.png" alt="Logo" />
-                    <h2>Log in to your emprise</h2>
+                    <h2>Log in</h2>
                     <p>Welcome back! Please enter login details.</p>
                   </div>
                   <div class="rlr-authforms__form">
