--- a/template/views/verifyemail.hbs
+++ b/template/views/verifyemail.hbs
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Your vacation, tours and travel theme needs are all met at emprise." />
+  <meta name="description" content="Verify your email address to access the best deals on vrindavan mathura tour package" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tour Travel Website Template | Emprise</title>
+  <title>Email Verification - Vrindavan Mathura Tour Package</title>
+  <meta name="robots" content="noindex">
+  <meta name=“keywords” content=“email verification, vrindavan mathura tour package, travel deals, online booking”/>
   <!-- Favicon -->
   {{>chead}}
 </head>
