--- a/template/partials/chead.hbs
+++ b/template/partials/chead.hbs
@@ -1,3 +1,13 @@
+<!-- Google tag (gtag.js) -->
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=G-Q51F66XQDD"
+></script>
+<script>
+  window.dataLayer = window.dataLayer || []; function
+  gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config',
+  'G-Q51F66XQDD');
+</script>
 <link rel="shortcut icon" type="image/png" href="/assets/favicon.png" />
 <!-- Plugins CSS -->
 <link rel="stylesheet" href="/styles/plugins.css" />
