--- a/template/views/orders.hbs
+++ b/template/views/orders.hbs
@@ -3,9 +3,9 @@
   <head>
     {{>chead}}
     <meta charset="UTF-8" />
-    <meta name="description" content="Your vacation, tours and travel theme needs are all met at emprise." />
+    <meta name="description" content="Manage your Vrindavan-Mathura Tour Package orders, payments, and more." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tour Travel Website Template | Emprise</title>
+    <title>{{namee}} | Orders</title>
     <meta name="robots" content="noindex">
     <meta name="keywords" content="vrindavan mathura tour package, order page, order, view, manage, orders">
   </head>
