--- a/template/views/signup.hbs
+++ b/template/views/signup.hbs
@@ -4,10 +4,9 @@
 <head>
   {{>chead}}
   <meta charset="UTF-8" />
-  <meta name="description" content="View and manage your orders on the Vrindavan-Mathura Tour Package order page." />
+  <meta name="description" content="Signup Vrindavan-Mathura Tour Package account and start planning your trip." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="keywords" content="vrindavan mathura tour package, order page, order, view, manage, orders">
-  <title>Order Page | Vrindavan Mathura Tour Package</title>
+  <title>Signup | Vrindavan Mathura Tour Package</title>
   <meta name="keywords" content="vrindavan mathura tour package, signup, tour, package, travel, tourism">
 </head>
 
