--- a/template/views/dashboard.hbs
+++ b/template/views/dashboard.hbs
@@ -30,7 +30,7 @@
                       <p>Hello <strong>{{namee}}</strong> (not <strong>{{namee}}</strong>? <a href="#" id="logot1">Logout</a>)</p>
                       <p>
                         From your account dashboard you can view your <a href="/orders">recent orders</a> and
-                        <a href="https://ui.emprise.tours/">edit your password and account details</a>.
+                        <a href="#">edit your password and account details</a>.
                       </p>
                     </div>
                   </div>
