--- a/template/partials/footer.hbs
+++ b/template/partials/footer.hbs
@@ -78,7 +78,7 @@
         </div>
         <!-- Footer payment thumbs -->
         <div class="rlr-footer__legal__row__col">
-          <img src="/assets/images/ele-payments.png" alt="Payments" />
+          <img loading="lazy" src="/assets/images/ele-payments.png" alt="Payments" />
         </div>
       </div>
     </div>
