--- a/template/partials/header.hbs
+++ b/template/partials/header.hbs
@@ -6,6 +6,7 @@
         <div class="rlr-logo rlr-logo__navbar-brand rlr-logo--default">
           <a href="/">
             <img
+            loading="lazy"
               src="/assets/logo.png"
               alt="#"
               class=""
@@ -26,6 +27,7 @@
           <div class="rlr-logo rlr-logo__navbar-brand rlr-logo--default">
             <a href="/">
               <img
+              loading="lazy"
                 src="/assets/logo.png"
                 alt="#"
                 class=""
@@ -69,6 +71,7 @@
             <a class="navigation-link" href="#">
               {{name}}
               <img
+              loading="lazy"
                 class="ui right spaced avatar image"
                 src="/assets/images/default.png"
                 alt="account avatar"
@@ -98,6 +101,7 @@
           <a class="navigation-link" href="/{{name}}">
             {{name}}
             <img
+            loading="lazy"
               class="ui right spaced avatar image"
               src="/assets/images/default.png"
               alt="account avatar"
