--- a/template/views/inquiry.hbs
+++ b/template/views/inquiry.hbs
@@ -107,7 +107,7 @@
                                 <li class="cart-item-card__header">
                                   <div>
                                     <img class="cart-item-card__img" src="/assets/tours/{{tour.id}}/{{tour.image}}"
-                                      alt="..." />
+                                      alt="..." loading="lazy"/>
                                   </div>
                                   <div>
                                     <p class="cart-item-card__title">{{tour.title}}</p>
