--- a/template/views/login.hbs
+++ b/template/views/login.hbs
@@ -21,7 +21,7 @@
               <div class="col-lg-4 offset-lg-4">
                 <form class="rlr-authforms">
                   <div class="rlr-authforms__header">
-                    <img src="/assets/favicon.png" alt="Logo" />
+                    <img src="/assets/favicon.png" alt="Logo" loading="lazy"/>
                     <h2>Log in</h2>
                     <p>Welcome back! Please enter login details.</p>
                   </div>
