--- a/template/views/signup.hbs
+++ b/template/views/signup.hbs
@@ -22,7 +22,7 @@
             <div class="col-lg-4 offset-lg-4">
               <div class="rlr-authforms">
                 <div class="rlr-authforms__header">
-                  <img class="mb-2" src="/assets/favicon.png" alt="Logo" />
+                  <img class="mb-2" src="/assets/favicon.png" alt="Logo" loading="lazy"/>
                   <h2>Create an account</h2>
                   <p>Helps to access all features of the site.</p>
                 </div>
