--- a/template/views/verifyemail.hbs
+++ b/template/views/verifyemail.hbs
@@ -29,7 +29,7 @@
             <div class="col-lg-4 offset-lg-4">
               <div class="rlr-authforms">
                 <div class="rlr-authforms__header">
-                  <img src="/assets/logo.png" alt="Logo" />
+                  <img loading="lazy" src="/assets/logo.png" alt="Logo" />
                   <h2>Check your email</h2>
                   <p>We sent a otp to {{email}}</p>
                   <p>Sometimes, it might be in the spam folder.</p>
