--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -28,7 +28,7 @@
               <li class="splide__slide rlr-banner-splide__slide">
                 <div class="rlr-banner-splide__image-wrapper">
                   <img class="rlr-banner-splide__banner-img lazyload" data-sizes="auto" src="/assets/banner1.jpg"
-                    alt="#" />
+                    alt="#" loading="lazy" />
                 </div>
                 <article class="rlr-banner-splide__content-wrapper">
                   <header class="rlr-banner-splide__header">
@@ -65,7 +65,7 @@
               <li class="splide__slide rlr-banner-splide__slide">
                 <div class="rlr-banner-splide__image-wrapper">
                   <img class="rlr-banner-splide__banner-img lazyload" data-sizes="auto" src="/assets/banner2.jpg"
-                    alt="#" />
+                    alt="#" loading="lazy" />
                 </div>
                 <article class="rlr-banner-splide__content-wrapper">
                   <header class="rlr-banner-splide__header">
@@ -125,7 +125,7 @@
                   {{#each this._doc.images}}
                   <div class="swiper-slide">
                     <img itemprop="image" data-sizes="auto" src="/assets/tours/{{../this._doc.id}}/{{this.url}}"
-                      class="lazyload" alt="product-image" />
+                      class="lazyload" alt="product-image" loading="lazy" />
                   </div>
                   {{/each}}
                   {{/with}}
@@ -217,7 +217,7 @@
                           {{#each this._doc.images}}
                           <div class="swiper-slide">
                             <img itemprop="image" data-sizes="auto" src="/assets/tours/{{../this._doc.id}}/{{this.url}}"
-                              class="lazyload" alt="product-image" />
+                              class="lazyload" alt="product-image" loading="lazy" />
                           </div>
                           {{/each}}
                           {{/with}}
@@ -387,7 +387,7 @@
             <div class="rlr-support-card rlr-support-card--sale">
               <div class="rlr-support-card__content">
                 <div class="rlr-support-card__img-wrapper">
-                  <img src="/assets/svg/headset.svg" alt="headset" />
+                  <img src="/assets/svg/headset.svg" alt="headset" loading="lazy" />
                 </div>
                 <h2 class="rlr-support-card__title">For Inquiry</h2>
                 <p class="rlr-support-card__subtitle rlr-support-card__text">We are happy to serve you 24X7 call us now!
@@ -401,7 +401,7 @@
             <div class="rlr-support-card rlr-support-card--help">
               <div class="rlr-support-card__content">
                 <div class="rlr-support-card__img-wrapper">
-                  <img src="/assets/svg/help-circle.svg" alt="headset" />
+                  <img src="/assets/svg/help-circle.svg" alt="headset" loading="lazy" />
                 </div>
                 <h2 class="rlr-support-card__title">Help &amp; Support</h2>
                 <p class="rlr-support-card__subtitle rlr-support-card__text">We're here to assist. Kindly share your
