--- a/template/views/contactus.hbs
+++ b/template/views/contactus.hbs
@@ -71,7 +71,7 @@
                     <span class="rlr-contact-detail-item__icon"> <i class="rlr-icon-font flaticon-map-marker"> </i> </span>
                     <div>
                       <p class="rlr-contact-detail-item__title">Address</p>
-                      <h6 class="rlr-contact-detail-item__desc">Aduki road, Mathura, U.P, India</h6>
+                      <h6 class="rlr-contact-detail-item__desc">Dhauli pyau Near Kaushik Plaza, Mathura, UP, India</h6>
                     </div>
                   </div>
                 </div>
