--- a/template/partials/aside.hbs
+++ b/template/partials/aside.hbs
@@ -18,7 +18,11 @@
             <span class="rlr-sidebar-menu__link-icon"><i
                 class="rlr-icon-font flaticon-carbon-box"
               > </i></span>
+            {{#if listing}}
+            Inquiry
+            {{else}}
             Orders
+            {{/if}}
           </a>
         </li>
         <li>
