--- a/template/partials/header.hbs
+++ b/template/partials/header.hbs
@@ -62,7 +62,7 @@
             <a
               class="navigation-link rlr-navigation__link--so"
               href="/addproduct"
-            >Add your listing</a>
+            >Add a tour</a>
           </li>
         {{/if}}
         <!-- User account dropdown -->
