--- a/template/views/login.hbs
+++ b/template/views/login.hbs
@@ -29,11 +29,7 @@
                     <div class="rlr-authforms__inputgroup"><label class="rlr-form-label rlr-form-label--light required"> Email </label> <input type="text" autocomplete="off" class="form-control form-control--light" id="email"/></div>
                     <div class="rlr-authforms__inputgroup"><label class="rlr-form-label rlr-form-label--light required"> Password </label> <input type="password" autocomplete="off" class="form-control form-control--light" id="password"/></div>
                     <div class="rlr-authforms__forgotpassword">
-                      <div class="form-check-inline">
-                        <input class="form-check-input rlr-form-check-input" id="rlr-checkbox-1" type="checkbox" value="defaultValue" />
-                        <label class="rlr-form-label rlr-form-label--checkbox rlr-form-label--font-inherit rlr-form-label--bold" for="rlr-checkbox-1">Remember me on this device</label>
-                      </div>
-                      <a href="account-pages--forgot-password">Forgot password</a>
+                      {{!-- <a href="account-pages--forgot-password">Forgot password</a> --}}
                     </div>
                     <button type="button" class="btn mb-3 rlr-button rlr-button--fullwidth rlr-button--primary" id="submit">Sign in</button>
                     <button type="button" class="btn mb-3 rlr-button rlr-button--fullwidth rlr-button--google" id="ggl_lng">Sign in with Google</button>
