--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -5,7 +5,7 @@
   {{>chead}}
   <meta charset="UTF-8" />
   <meta name="description"
-    content="6-day/5-night pilgrimage to Mathura, Vrindavan, and Bharatpur. Visit sacred temples, boat ride on Yamuna River, Bharatpur Bird Sanctuary." />
+    content="Vrindavan Mathura Tour Package: Explore the holy city of Vrindavan and Mathura with our comprehensive tour packages. We also offer tours to other cities in India, such as Varanasi, Jaipur, and Amritsar. Book your tour today!" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vrindavan Mathura Tour Package: Explore the Birthplace of Krishna and Radha</title>
   <meta name="keywords"
