--- a/template/partials/footer.hbs
+++ b/template/partials/footer.hbs
@@ -1,3 +1,4 @@
+<a href="tel:+91 8126008081" class="floater_call"><i class="rlr-icon-font flaticon-phone-receiver-silhouette"></i></a>
 <footer class="rlr-footer rlr-section rlr-section__mt">
   <div class="container">
     <div class="rlr-footer__getintouch">
