--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14375,3 +14375,49 @@ span.select2-selection__rendered {
 .rlr-main--fixed-top {
   margin-top: 100px;
 }
+.floater_call{
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  z-index: 10;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  background-color: #71f271;
+  color: white;
+  animation: rotateCircle 1s linear infinite;
+}
+.floater_call:hover{
+  color: white;
+}
+.floater_call::after{
+  position: absolute;
+  content: "";
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+@keyframes rotateCircle {
+  0% {
+      transform: rotate(0deg);
+  }
+  25% {
+      transform: rotate(-20deg);
+  }
+  50%{
+    transform: rotate(0deg);
+  }
+  75%{
+    transform: rotate(-20deg);
+  }
+  100% {
+      transform: rotate(0deg);
+  }
+}
