--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14387,7 +14387,7 @@ span.select2-selection__rendered {
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  background-color: #71f271;
+  background-color: #10a5b2;
   color: white;
   animation: rotateCircle 1s linear infinite;
   font-size: 30px;
